add cscope plugin

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,24 @@
 # everything
 * 
-
 # but
 !tmp_gitignore
 !.gitignore
 !.gitignore_basic
 !.vimrc
+
+!.vim
+!.vim/
+!.vim/plugins
+!.vim/plugins/
+!.vim/plugins/**
+!.vim/plugins/cscope_maps.vim
+
+# this doesn't work :(
+#!~/.vim
+#!~/.vim/
+#!~/.vim/**
+#!~/.vim/*/**
+
 !.zshrc
 !.vimsyntax.vim
 !delete_zcomp.sh
